--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "my-expo-app",
-    "slug": "my-expo-app",
+    "name": "hybrid-rn-example24",
+    "slug": "hybrid-rn-example24",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
