--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-picker-select": "^9.0.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-star-rating-widget": "^1.7.3"
+    "react-native-star-rating-widget": "^1.7.3",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
