--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
-EXPO_PUBLIC_UPLOAD_SERVER=http://192.168.1.127:3002/api/v1
-EXPO_PUBLIC_MEDIA_API=http://192.168.1.127:3000/api/v1
-EXPO_PUBLIC_AUTH_API=http://192.168.1.127:3001/api/v1
+# EXPO_PUBLIC_UPLOAD_SERVER=http://192.168.1.127:3002/api/v1
+# EXPO_PUBLIC_MEDIA_API=http://192.168.1.127:3000/api/v1
+# EXPO_PUBLIC_AUTH_API=http://192.168.1.127:3001/api/v1
 #EXPO_PUBLIC_GRAPHQL_API=http://10.120.32.94/graphql-api/graphql
+EXPO_PUBLIC_AUTH_API=http://10.120.32.87/auth-api/api/v1
+EXPO_PUBLIC_MEDIA_API=http://10.120.32.87/media-api/api/v1
+EXPO_PUBLIC_UPLOAD_SERVER=http://10.120.32.87/upload/api/v1
